Added search button to search bar

--- a/index.html
+++ b/index.html
@@ -52,10 +52,16 @@
                     </div>
                 </div>
             </div>
+
             <div class="container">
                 <h3 class="text-center text-muted py-3">Search For a Movie to Nominate!</h3>
                 <form id="searchForm">
-                    <input type="text" class="form-control" id="searchText" placeholder="Type a Movie Name...">
+                    <div class="input-group mb-3">
+                        <input type="text" id="searchText" class="form-control" placeholder="Type a Movie Name...">
+                        <div class="input-group-append">
+                          <button class="btn btn-outline-secondary px-5" type="submit" type="button">Search</button>
+                        </div>
+                    </div>
                 </form>
             </div>
             <div class="container py-5">
