Ability to nominate movies

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <body>
         <section class="jumbotron text-center bg-light">
-            <div class="container" id="nominations">
+            <div class="container">
                 <h1 class="jumbotron-heading display-4 ">Nominations</h1>
-                <div class="card-deck py-3">
+                <div class="card-deck py-3" id="nominations">
                     <div class="card bg-light" >
                         <img class="card-img-top" src="images/nominations-placeholder.png" alt="Card image cap">
                         <div class="card-body">
@@ -72,6 +72,8 @@
                 </div>
             </div>
         </section>
+        <script>
+        </script>
     </body>
 
     <footer class="text-muted py-1">
