--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
     <body>
         <section class="jumbotron text-center bg-light">
             <div class="container">
+                <div class="alert alert-success py-3" role="alert">
+                    Thank you for your submission!
+                </div>
                 <h1 class="jumbotron-heading display-4 ">Nominations</h1>
                 <div class="card-deck py-3" id="nominations">
-
+                </div>
+                <div class="py-3" id="submitNominations">
+                    <a onclick="submitNominations()" class="btn btn-success px-5 py-2" href="#">Submit Nominations</a>
                 </div>
             </div>
 
