--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
         <nav class="navbar py-3">
-            <a class="navbar-brand text-success px-2" href="/"> <img src="images/logo.png" width="50" height="50"> Shopify Internships</a>
+            <a class="navbar-brand text-success px-2" href="index.html"> <img src="images/logo.png" width="50" height="50"> Shopify Internships</a>
         </nav>
     </header>
 
