--- a/index.html
+++ b/index.html
@@ -48,17 +48,18 @@
                 </div>
             </div>
         </section>
-        <script>
-        </script>
     </body>
 
-    <footer class="text-muted py-1">
+    <footer>
         <div class="container-fluid">
             <p class="float-right px-5">
                 <a class="text-success" href="#">Back to top</a>
             </p>
-            <p class="text-success px-5">Made by Ahmed Hassan for Shopify's Winter 2021 Internships Application</p>
-            <p class="text-success px-5">Copyright &copy; 2020 The Shoppies - Movie Awards for Entrepreneurs. All Rights Reserved</p>
+            <p class="text-success px-5">Made by Ahmed Hassan for Shopify's Winter 2021 Internships Application
+            <br> Email: afayek@mun.ca
+            <br> LinkedIn: <a href="https://www.linkedin.com/in/ahmed-hassan-471066195">https://www.linkedin.com/in/ahmed-hassan-471066195</a>
+            <br> Github: <a href="https://github.com/afhassan">https://github.com/afhassan </a>
+            <br> Copyright &copy; 2020 The Shoppies - Movie Awards for Entrepreneurs. All Rights Reserved.</p>
         </div>
     </footer>
 </html>
