--- a/show.html
+++ b/show.html
@@ -36,8 +36,8 @@
             <p class="float-right px-5">
                 <a class="text-success" href="#">Back to top</a>
             </p>
-            <p class="text-success px-5">Made by Ahmed Hassan for Shopify's Winter 2021 Internships Application
-            <br> Email: afayek@mun.ca
+            <p class="text-success px-5">Made by <b>Ahmed Hassan</b> for Shopify's Fall 2021 Internships Application
+                <br> Email: <b>afayek@mun.ca</b>
             <br> LinkedIn: <a href="https://www.linkedin.com/in/ahmed-hassan-471066195">https://www.linkedin.com/in/ahmed-hassan-471066195</a>
             <br> Github: <a href="https://github.com/afhassan">https://github.com/afhassan </a>
             <br> Copyright &copy; 2020 The Shoppies - Movie Awards for Entrepreneurs. All Rights Reserved.</p>
